# Design

./: CMakeLists.txt  main.cpp  main.h
Behaviour/: Command.cpp  Command.h  Interpreter.cpp  Interpreter.h  Iterator.cpp  Iterator.h  Mediator.cpp  Mediator.h  Memento.cpp  Memento.h  Observer.cpp  Observer.h  ResponsibilityChain.cpp  ResponsibilityChain.h  State.cpp  State.h  Strategy.cpp  Strategy.h  TemplateMethod.cpp  TemplateMethod.h  Visitor.cpp  Visitor.h
Creational/: Builder.cpp  Builder.h  Factory.cpp  Factory.h  Prototype.cpp  Prototype.h  Singleton.cpp  Singleton.h
Deuterogenic/: ProducerConsumer.cpp  ProducerConsumer.h  ResponseTree.cpp  ResponseTree.h
Reactor/: EntityModule.cpp  EntityModule.h  Reactor.cpp  Reactor.h
Structural/: Adapter.cpp  Adapter.h  Bridge.cpp  Bridge.h  Composite.cpp  Composite.h  Decorator.cpp  Decorator.h  Facade.cpp  Facade.h  Flyweight.cpp  Flyweight.h  Proxy.cpp  Proxy.h
